[project]
name = "electrocardiogram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kaggle>=1.7.4.5",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "torch>=2.7.1",
    "wfdb>=4.3.0",
]
